--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             text-decoration: none;
         }
         .banner {
-            background: url('banner-image.jpg') no-repeat center center/cover;
-            color: white;
+            background: url('banner1.png') no-repeat center center/cover;
+            color: #59513C;
             padding: 100px 20px;
             text-align: center;
         }
@@ -77,8 +77,8 @@
         </ul>
     </nav>
     <div class="banner">
-        <h1>Добро пожаловать в Lanta Home-Studio</h1>
-        <p>Гармония природы и искусства в вашем доме!</p>
+        <h1>Добро пожаловать <br>в Lanta Home-Studio</h1>
+        <h3>Гармония природы и искусства в вашем доме!</h3>
     </div>
     <div class="content">
         <div id="about" class="section">
@@ -87,7 +87,7 @@
         </div>
         <div id="catalog" class="section">
             <h2>Каталог работ</h2>
-            <img src="catalog-image.jpg" alt="Каталог работ">
+            <img src="katalog1.png" alt="Каталог работ">
             <p>Выберите понравившуюся работу из представленной коллекции или закажите создание нового произведения по вашим индивидуальным предпочтениям.</p>
         </div>
         <div id="relief" class="section">
