--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div id="shop" class="section">
             <h2>Магазин</h2>
-            <p>Посетите наш магазин, чтобы приобрести уникальные произведения Светланы Тумановой.</p>
+            <p>Посетите <a href="https://www.wildberries.ru/brands/lanta-home-studio#c231257645">наш магазин</a> , чтобы приобрести уникальные произведения Светланы Тумановой.</p>
         </div>
     </div>
     <footer>
